<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_synopsis"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    >


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_release_date_synopsis"
        style="@style/SmallFont.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        tools:text="21 Oct 2020"
        android:textAlignment="viewStart"
        android:textColor="@color/grey_dark"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_padding" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SmallFont.Black"
        android:text="@string/str_divider"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/tv_release_date_synopsis"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_padding"/>


    <HorizontalScrollView
        android:id="@+id/hsv_other_details_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="@id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_average_vote_synopsis"
        app:layout_constraintEnd_toStartOf="@id/guideline_right_padding"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:id="@+id/ll_other_details_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>

    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_duration_synopsis"
        style="@style/SmallFont.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_medium"
        tools:text="2h 40m"
        android:textAlignment="viewStart"
        android:textColor="@color/grey_dark"
        app:layout_constraintStart_toEndOf="@+id/tv_divider"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_padding" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_movie_title_synopsis"
        style="@style/LargeFont.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_semi_bold"
        android:maxLines="2"
        tools:text="Avengers: Endgame"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right_padding"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date_synopsis" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_movie_average_vote_synopsis"
        style="@style/SmallFont.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/average_vote_badge"
        android:fontFamily="@font/poppins_medium"
        android:drawablePadding="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        tools:text="4.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_synopsis" />

    <TextView
        android:id="@+id/tv_total_vote_synopsis"
        style="@style/XSmallFont.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_medium"
        tools:text="29987 Votes"
        android:textColor="@color/grey_dark"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_average_vote_synopsis"
        app:layout_constraintStart_toEndOf="@+id/tv_movie_average_vote_synopsis"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_average_vote_synopsis" />



    <View
        android:id="@+id/view_divider_movie_header_synopsis"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="20dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right_padding"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@id/hsv_other_details_synopsis" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_synopsis_label"
        style="@style/MediumFont.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/str_synopsis"
        android:textColor="@color/header_black"
        app:layout_constraintStart_toStartOf="@id/guideline_left_padding"
        app:layout_constraintTop_toTopOf="@id/view_divider_movie_header_synopsis" />


    <com.example.savvologytask.helper.ReadMoreTextView
        android:id="@+id/tv_overview_movie_synopsis"
        style="@style/XSmallFont.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/open_sans_regular"
        app:rmtv_less_text="@string/see_less"
        app:rmtv_max_length="240"
        app:rmtv_isExpand="false"
        app:rmtv_more_text="@string/see_more"
        android:textColor="#666666"
        android:text="@string/sample"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right_padding"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_synopsis_label" />

    <View
        android:id="@+id/view_divider_movie_synopsis"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="16dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right_padding"
        app:layout_constraintStart_toStartOf="@+id/guideline_left_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_overview_movie_synopsis" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>